fix image alignment

--- a/public/stylesheets/styles.scss
+++ b/public/stylesheets/styles.scss
@@ -216,3 +216,9 @@ mark, .mark {
 .orng{
   color: #EC4E3B;
 }
+
+.center-image
+{
+    margin: 0 auto;
+    display: block;
+}
